# MFTF

./: .env  .gitignore  README.md  debug_mp.py  debug_mp_2.py  main.py  requirements.txt  test.py
backend/: main.py
cpp/: CMakeLists.txt  FaceMonitor.cpp  FaceMonitor.hpp  FatigueApp.cpp  FatigueApp.hpp  InputMonitor.cpp  InputMonitor.hpp  README.md  build.bat  download_models.ps1  main.cpp
data/logs/: monitor_log_20251029.csv  monitor_log_20251112.csv
frontend/: app.js  index.html  style.css
src/: data_manager.py  face_monitor.py  fatigue_estimator.py  gui.py  input_monitor.py  main.py  train_fatigue_model.py  train_initial_model.py
src/config/: settings.py
src/data/collector/: keyboard_monitor.py  mouse_monitor.py  webcam_monitor.py
src/data/preprocessor/: feature_extractor.py
src/interface/: notifier.py
src/model/: fatigue_regressor.py
src/utils/: logger.py  path_utils.py
